src/test/ui/unconstrained-none.stderr
error[E0282]: type annotations needed
  --> $DIR/unconstrained-none.rs:4:5
   |
LL |     None;
   |     ^^^^ cannot infer type for `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
